--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -25,7 +25,6 @@
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
-  overflow-y:scroll ;
 }
 .main .icon {
   width: 24px;
@@ -43,7 +42,7 @@
   width: 320px;
 }
 
-.main input[type="text"], .requestBtn {
+.main input[type="text"], .requestBtn, .main select {
   padding: 12px 16px;
   border: 1px solid #10a37f;
   border-radius: 4px;
